Initial build for Java17 (#441)
* Change src/classes/modules/java.base/jdk/internal/misc/* to src/classes/modules/java.base/access/*

* Update change of misc to access in build.gradle file

* Updated Language(Java) Level to 17

* Adapted String class accoring to String class of Java 17

* Move Unsafe.java (src/classes/modules/java.base/jdk/internal/access/Unsafe.java -> src/classes/modules/java.base/jdk/internal/misc/Unsafe.java)

* Add (--add-exports and --add-opens statement for java.internal.misc) statement

* Add (--add-exports statement for java.internal.misc=ALL-UNNAMED) statement

* Update import statement for importing jdk.internal.misc.Unsafe

* Fix ProxyGenerator.generateProxyClass(-----) with new update in Java 17

* Remove inheritence as it is not needed