@@ -37,6 +37,7 @@ sourceSets {
 }
 
 compilePeersJava.options.compilerArgs += [
+        '--add-exports', 'java.base/jdk.internal.access=ALL-UNNAMED',
         '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED'
 ]
 
@@ -58,5 +59,6 @@ compileModulesJava.options.compilerArgs += [
 ]
 
 compileTestJava.options.compilerArgs += [
+        '--add-exports', 'java.base/jdk.internal.access=ALL-UNNAMED',
         '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED'
 ]
